--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
+        <p>
+          Project Code: <a href="https://github.com/jbizzlefoshizzle/interactive-dashboard-python-javascript-heroku">
+          Github Repository
+        </a>
+        </p>
       </div>
     </div>
     <div class="row">
